--- a/client/src/scss/critical.scss
+++ b/client/src/scss/critical.scss
@@ -1,4 +1,15 @@
 /*
 Contains the essential layout styles for the site
  */
-@import "../bootstrap-4.1.3/scss/bootstrap-reboot";
+@import "variables";
+@import "../bootstrap-4.1.3/scss/bootstrap-grid";
+
+header {
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+}
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
