--- a/client/src/scss/_elements.scss
+++ b/client/src/scss/_elements.scss
@@ -14,3 +14,19 @@
     transform: translateY(-50%);
   }
 }
+
+.dnadesign__elementaluserforms__model__elementform {
+  @extend .pb-4;
+
+  .form-element__form {
+    padding: 1rem;
+  }
+
+  .field {
+    margin-bottom: 1em;
+  }
+
+  input[type=text], input[type=email], textarea {
+    @extend .form-control;
+  }
+}
