--- a/client/src/scss/common.scss
+++ b/client/src/scss/common.scss
@@ -11,6 +11,7 @@ Common styles for the site
 @import "../bootstrap-4.1.3/scss/type";
 @import "../bootstrap-4.1.3/scss/list-group";
 @import "../bootstrap-4.1.3/scss/utilities";
+@import "../bootstrap-4.1.3/scss/forms";
 @import "hamburgers";
 @import "elements";
 @import "../bootstrap-4.1.3/scss/images";
