--- a/client/src/scss/common.scss
+++ b/client/src/scss/common.scss
@@ -8,6 +8,7 @@ Common styles for the site
 @import "../bootstrap-4.1.3/scss/variables";
 @import "../bootstrap-4.1.3/scss/mixins";
 @import "../bootstrap-4.1.3/scss/reboot";
+@import "../bootstrap-4.1.3/scss/bootstrap-grid";
 @import "../bootstrap-4.1.3/scss/type";
 @import "../bootstrap-4.1.3/scss/list-group";
 @import "../bootstrap-4.1.3/scss/utilities";
