--- a/client/src/scss/critical.scss
+++ b/client/src/scss/critical.scss
@@ -13,3 +13,10 @@ header {
   max-width: 100%;
   height: auto;
 }
+.element-constrained {
+  @extend .container;
+}
+.element-padded {
+  padding-top: $elementPadding;
+  padding-bottom: $elementPadding;
+}
