--- a/client/src/scss/_hamburgers.scss
+++ b/client/src/scss/_hamburgers.scss
@@ -21,7 +21,7 @@ $hamburger-active-hover-filter: $hamburger-hover-filter !default;
 
 // Types
 $hamburger-types: (
-        vortex
+        spin
 );
 
 @import '../hamburgers/hamburgers';
