--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -1,4 +1,23 @@
 
 $white: #fff;
-$highlightGrey: #eee;
+$highlightGrey: #f3f3f3;
 $elementPadding: 1rem;
+
+$font-family-base: 'Open Sans', sans-serif;
+$headings-font-family: 'Lato', sans-serif;
+$quotation-font: 'PT Serif', serif;
+$blockquote-font-size: 1.3rem;
+$blockquote-font-size-large: 1.7rem;
+$blockquote-indent: 20px;
+$blockquote-color: #555;
+
+$h1-font-size: 1.8rem;
+$h1-font-size-large: 2.2rem;
+$h1-border-color: #7b0828;
+$h1-color: #7b0828;
+
+$h2-font-size: 1.45rem;
+$h2-font-size-large: 1.6rem;
+
+$h3-font-size: 1.2rem;
+$h3-font-size-large: 1.45rem;
