--- a/client/src/scss/_navbar.scss
+++ b/client/src/scss/_navbar.scss
@@ -1,14 +1,17 @@
 div#navbarNav {
   position: absolute;
-  right: 5px;
+  right: 16px;
   padding: 10px;
   background: $white;
   min-width: 250px;
-  top: -500px;
+  top: -1000px;
   transition-duration: 0.5s;
+  -webkit-box-shadow: -1px 1px 1px 1px rgba(0,0,0,0.26);
+  -moz-box-shadow: -1px 1px 1px 1px rgba(0,0,0,0.26);
+  box-shadow: -1px 1px 1px 1px rgba(0,0,0,0.26);
 
   &.visible {
-    top: 70px;
+    top: 61px;
   }
 
   ul.navbar-nav {
@@ -19,6 +22,7 @@ div#navbarNav {
       font-size: 1.05em;
       padding: 0.5em 1em;
       border-bottom: solid 1px $highlightGrey;
+      color: $h1-color;
 
       a {
         color: inherit;
