--- a/client/src/scss/common.scss
+++ b/client/src/scss/common.scss
@@ -2,6 +2,7 @@
 Common styles for the site
  */
 
+@import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans|PT+Serif:400i');
 @import "variables";
 @import "../bootstrap-4.1.3/scss/bootstrap-reboot";
 @import "../bootstrap-4.1.3/scss/functions";
@@ -13,8 +14,11 @@ Common styles for the site
 @import "../bootstrap-4.1.3/scss/utilities";
 @import "../bootstrap-4.1.3/scss/forms";
 @import "../bootstrap-4.1.3/scss/bootstrap-grid";
+@import "../bootstrap-4.1.3/scss/card.scss";
+@import "../bootstrap-4.1.3/scss/transitions.scss";
 @import "hamburgers";
 @import "elements";
 @import "../bootstrap-4.1.3/scss/images";
 @import "navbar";
 @import "footer";
+@import "sitestyles";
